Info bar overlapping fixes.

--- a/emacs/org_mode.css
+++ b/emacs/org_mode.css
@@ -10,7 +10,7 @@ html {
     display: flex;
     flex-direction: column;
     position: relative;
-    height: 100%;
+    height: 97vh;
 }
 
 .CodeMirror {
@@ -29,7 +29,7 @@ html {
     position: absolute;
     top: 0;
     right: 0;
-    bottom: 14px;
+    bottom: 15px;
     left: 0;
 }
 
@@ -46,7 +46,7 @@ html {
     bottom: 0;
     background: #eeeeee;
     padding: 5px 10px;
-    height: 10px;
+    height: 1.95vh;
     left: 0;
     right: 0;
     z-index: 10;
@@ -55,7 +55,6 @@ html {
 .theme-chooser {
     float: right;
     margin-right: -10px;
-    margin-top: -5px;
 }
 
 .theme-chooser label {
